syntax = "proto3";

import "pkg/protocol/core/base/base.proto";

package pbapp;

option go_package = "github.com/TencentBlueKing/bk-bcs/bcs-services/bcs-bscp/pkg/protocol/core/app;pbapp";

// App source resource reference: pkg/dal/table/app.go
message App {
  uint32 id = 1;
  uint32 biz_id = 2;  // Deprecated: use space instead
  string space_id = 3;
  string space_type_id = 4;
  string space_name = 5;
  string space_type_name = 6;
  AppSpec spec = 7;
  pbbase.Revision revision = 8;
}

// AppSpec source resource reference: pkg/dal/table/app.go
message AppSpec {
  string name = 1;
  string config_type = 2;  // config_type is enum type
  string memo = 3;
  string alias = 4;
  string data_type = 5;  // data_type is enum type.
}
